--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.0",
     "fast-xml-parser": "^5.3.3",
     "next": "16.1.4",
     "react": "19.2.3",
